@startuml

title __IMAGEDETAIL's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.imageDetail {
      class com.architectica.socialcomponents.main.imageDetail.ImageDetailActivity {
          {static} + IMAGE_TITLE_EXTRA_KEY : String
          {static} - TAG : String
          - progressBar : ProgressBar
          - viewGroup : ViewGroup
          + createPresenter()
          # onCreate()
          - initActionBar()
          - loadImage()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.imageDetail {
      class com.architectica.socialcomponents.main.imageDetail.ImageDetailPresenter {
          + calcMaxImageSide()
          ~ ImageDetailPresenter()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.imageDetail {
      interface com.architectica.socialcomponents.main.imageDetail.ImageDetailView {
      }
    }
  }
  

  com.architectica.socialcomponents.main.imageDetail.ImageDetailActivity .up.|> com.architectica.socialcomponents.main.imageDetail.ImageDetailView
  com.architectica.socialcomponents.main.imageDetail.ImageDetailActivity -up-|> com.architectica.socialcomponents.main.base.BaseActivity
  com.architectica.socialcomponents.main.imageDetail.ImageDetailActivity o-- com.architectica.socialcomponents.views.TouchImageView : touchImageView
  com.architectica.socialcomponents.main.imageDetail.ImageDetailPresenter -up-|> com.architectica.socialcomponents.main.base.BasePresenter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
